Removendo os estilos para o nível mais básico
Tentando uma abordagem mais simplistas...

--- a/css/gccsd2.css
+++ b/css/gccsd2.css
@@ -1,26 +1,21 @@
 body {
-    font-family: "Judson";
+    font: 1.1em/1.7  'Droid Sans', 'Calibri', 'Arial', 'sans-serif';
     text-align: center;
-    background-color: #EFEFEF;
+    background-color: #efeee8;
+    color: #454545;
+    max-width: 37em;
+    margin: 0 auto;
     padding: 0;
 }
 
 #corpo {
-    width: 700px;
-    margin: 0px auto;
-    padding: 0 0 15px 0;
-    -moz-box-shadow: 0 0px 23px #222;
-    -webkit-box-shadow: 0 0px 23px #222;
-    -o-box-shadow: 0 0px 23px #222;
-    -ie-box-shadow: 0 0px 23px #222;
-    box-shadow: 0 0px 23px #222;
+    margin-top: 2em;
 }
 
 h1 {
-    margin: 0;
-    padding: 10px 10px 20px 10px;
+    font-size: 1.5em;
 }
-
+ 
 p {
-    margin: 8px 10px;
+    margin-bottom: 1.5em;
 }
