--- a/css/gccsd2.css
+++ b/css/gccsd2.css
@@ -32,7 +32,7 @@ section, header, article, figure, hgroup {
     display: block;
 }
 
-h1, h2, ul, section, hgroup header, article, figure {
+h1, h2, h3, ul, section, hgroup header, article, figure {
     margin: 0;
     padding: 0;
 }
@@ -75,6 +75,7 @@ footer ul {
  * Estilo para
  * barra de navegação
  */
+
 .navBar ul{
     text-align: left;
 }
@@ -88,4 +89,17 @@ footer ul {
 }
 .navBar ul li a:hover{
     color: #d4aa00;
+}
+
+/*
+ * Programação
+ * Página Ações
+ */
+
+.txtAcoes{
+	text-align:left;	
+}
+.txtAcoes ul{
+	list-style-type: circle;
+	margin-left:50px;
 }
